buttons no longer overflow out of their container

--- a/src/index.css
+++ b/src/index.css
@@ -154,7 +154,7 @@ li div {
 
 /* Park info styles */
 .parkInfo {
-  width: 80%;
+  width: 70%;
   float: left;
   overflow-x: hidden;
 }
@@ -162,6 +162,10 @@ li div {
 /* Park button styles */
 .buttons {
   width: 16%;
+  float: right;
+}
+
+.buttons button {
   float: right;
 }
 
